syntax = "proto3";

package dispatcherUser;

// "directory/;package_name"
option go_package = "/;dispatcherUser";

service DispatcherUserService {
  rpc Add (AddRequest) returns (UUID);
  rpc Update (UpdateRequest) returns (Empty);
  rpc UpdateRole (UpdateRoleRequest) returns (Empty);
  rpc Remove (RemoveRequest) returns (Empty);
}

message AddRequest {
  string phone = 1;
  string email = 2;
  string login = 3;
  string password = 4;
  string status = 5;
}

message UpdateRequest {
  string user_id = 1;
  string phone = 2;
  string email = 3;
  string login = 4;
  string password = 5;
  string status = 6;
}

message UpdateRoleRequest {
  string user_id = 1;
  string role_id = 3;
}

message RemoveRequest {
  string user_id = 1;
}

// Responses
message UUID {
  string value = 1;
}

message Empty {
}

message Exist {
  bool exist = 1;
}
